# SemLens

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
app/: annotation_store.py  app.py  state.py
app/components/: scatter.py
examples/definitions/: english_definitions_by_gemini25pro.json
semlens/: __init__.py  data_loading.py  definitions.py  embeddings.py  lda.py  metrics.py  reduction.py  spaces.py  utils.py
tests/: test_core.py
